# kaggle-store-sales

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
config/: config.toml
kaggle_store_sales/: main.py
kaggle_store_sales/loaders/: data_loader.py
kaggle_store_sales/utils/: config.py
notebooks/: exploratory_data_analysis.ipynb
