[tool.poetry]
name = "kaggle-store-sales"
version = "0.1.0"
description = ""
authors = ["Yan-Xing Lan <yanxing.lan@gmx.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.1"
toml = "^0.10.2"
pandas = "^2.2.2"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
